fix button overflow on small screens

--- a/index.css
+++ b/index.css
@@ -280,7 +280,7 @@ p,
 
 .button-row a {
     width: 100%;
-    margin: 1em 2em 0 2em;
+    margin: 1em 0.75em 0 0.75em;
 }
 
 .needs-modal-container {
